Afegeix referència a un llibre rellevant

--- a/NovoTeX/BodyMatter/3r/Probabilitat.tex
+++ b/NovoTeX/BodyMatter/3r/Probabilitat.tex
@@ -1,4 +1,14 @@
 \documentclass[../Apunts.tex]{subfiles}
+% Measure Theory, Doob, J.L.
+%  You are different from other books on measure theory in that you accept
+%  probability theory as an essential part of measure theory. This means that
+%  many examples are taken from probability; that probabilistic concepts such
+%  as independence, Markov processes, and conditional expectations are
+%  integrated into you rather than being relegated to an appendix; that more
+%  attention is paid to the role of algebras than is customary; and that the
+%  metric defining the distance between sets as the measure of their symmetric
+%  difference is exploited more than is customary.
+% https://www.springer.com/gp/book/9780387940557
 
 \begin{document}
 \part{Probabilitat i modelització estocàstica}
