Corregeix subfiles path a NovoTeX

--- a/NovoTeX/BodyMatter/3r/Probabilitat.tex
+++ b/NovoTeX/BodyMatter/3r/Probabilitat.tex
@@ -1,4 +1,4 @@
-\documentclass[../Apunts.tex]{subfiles}
+\documentclass[../../Main.tex]{subfiles}
 % Measure Theory, Doob, J.L.
 %  You are different from other books on measure theory in that you accept
 %  probability theory as an essential part of measure theory. This means that
