Comenta les inclusions dels apèndixos

--- a/NovoTeX/Main.tex
+++ b/NovoTeX/Main.tex
@@ -474,7 +474,7 @@
 	\subfile{BodyMatter/1r/Fonaments.tex}
 	\subfile{BodyMatter/1r/AlgebraLineal.tex}
 	\subfile{BodyMatter/1r/FVR.tex}
-	\subfile{BodyMatter/1r/GeometriaProjectiva.tex}
+	%\subfile{BodyMatter/1r/GeometriaProjectiva.tex}
 %	\subfile{BodyMatter/1r/Apendix1r.tex} % Geometria projectiva
 }
 \newcommand{\segon}{
@@ -485,7 +485,7 @@
 	\subfile{BodyMatter/2n/MatematicaDiscreta.tex}
 	\subfile{BodyMatter/2n/EstructuresAlgebraiques.tex}
 	\subfile{BodyMatter/2n/MetodesNumerics.tex}
-	\subfile{BodyMatter/2n/TeoriaDeLaMesura.tex}
+	%\subfile{BodyMatter/2n/TeoriaDeLaMesura.tex}
 %	\subfile{BodyMatter/2n/Apendix2n.tex} % Teoria de la mesura (Lebesge o per probabilitat?)
 }
 \newcommand{\tercer}{
@@ -498,7 +498,7 @@
 	\subfile{BodyMatter/3r/Estadistica.tex}
 	\subfile{BodyMatter/3r/GeoDiferencial.tex}
 	\subfile{BodyMatter/3r/EDOS2.tex}
-	\subfile{BodyMatter/3r/CalculTensorial.tex}
+	%\subfile{BodyMatter/3r/CalculTensorial.tex}
 %	\subfile{BodyMatter/3r/Apendix3r.tex} % Formes diferencials (?) 
 }										  % Tensor calculus (YouTube)
 										  % Àlgebra homològica (Aquesta queda molt lluny, no crec)
