Move BackMatter to end-matter

--- a/Main.tex
+++ b/Main.tex
@@ -269,7 +269,7 @@
 \makeglossary
 
  %%%%% BIBLIOGRAFIA %%%%%
-\addbibresource{BackMatter/referencies.bib}
+\addbibresource{end-matter/referencies.bib}
 \DeclareQuoteAlias{spanish}{catalan}
 
 
