Change BodyMatter to body-matter

--- a/Main.tex
+++ b/Main.tex
@@ -470,36 +470,36 @@
  %%%%% BODY MATTER %%%%%
 \newcommand{\primer}{
 	\book{Primer curs}
-	\subfile{BodyMatter/TempIntro.tex}
-	\subfile{BodyMatter/1r/Fonaments.tex}
-	\subfile{BodyMatter/1r/AlgebraLineal.tex}
-	\subfile{BodyMatter/1r/FVR.tex}
-	%\subfile{BodyMatter/1r/GeometriaProjectiva.tex}
-%	\subfile{BodyMatter/1r/Apendix1r.tex} % Geometria projectiva
+	\subfile{body-matter/TempIntro.tex}
+	\subfile{body-matter/1r/Fonaments.tex}
+	\subfile{body-matter/1r/AlgebraLineal.tex}
+	\subfile{body-matter/1r/FVR.tex}
+	%\subfile{body-matter/1r/GeometriaProjectiva.tex}
+%	\subfile{body-matter/1r/Apendix1r.tex} % Geometria projectiva
 }
 \newcommand{\segon}{
 	\book{Segon curs}
-	\subfile{BodyMatter/2n/CDVO.tex}
-	\subfile{BodyMatter/2n/AnalisiMatematic.tex}
-	\subfile{BodyMatter/2n/GeometriaLineal.tex}
-	\subfile{BodyMatter/2n/MatematicaDiscreta.tex}
-	\subfile{BodyMatter/2n/EstructuresAlgebraiques.tex}
-	\subfile{BodyMatter/2n/MetodesNumerics.tex}
-	%\subfile{BodyMatter/2n/TeoriaDeLaMesura.tex}
-%	\subfile{BodyMatter/2n/Apendix2n.tex} % Teoria de la mesura (Lebesge o per probabilitat?)
+	\subfile{body-matter/2n/CDVO.tex}
+	\subfile{body-matter/2n/AnalisiMatematic.tex}
+	\subfile{body-matter/2n/GeometriaLineal.tex}
+	\subfile{body-matter/2n/MatematicaDiscreta.tex}
+	\subfile{body-matter/2n/EstructuresAlgebraiques.tex}
+	\subfile{body-matter/2n/MetodesNumerics.tex}
+	%\subfile{body-matter/2n/TeoriaDeLaMesura.tex}
+%	\subfile{body-matter/2n/Apendix2n.tex} % Teoria de la mesura (Lebesge o per probabilitat?)
 }
 \newcommand{\tercer}{
 	\book{Tercer curs}
-	\subfile{BodyMatter/3r/Topologia.tex}
-	\subfile{BodyMatter/3r/Probabilitat.tex}
-	\subfile{BodyMatter/3r/EDOS1.tex}
-	\subfile{BodyMatter/3r/Galois.tex}
-	\subfile{BodyMatter/3r/Complexa.tex}
-	\subfile{BodyMatter/3r/Estadistica.tex}
-	\subfile{BodyMatter/3r/GeoDiferencial.tex}
-	\subfile{BodyMatter/3r/EDOS2.tex}
-	%\subfile{BodyMatter/3r/CalculTensorial.tex}
-%	\subfile{BodyMatter/3r/Apendix3r.tex} % Formes diferencials (?) 
+	\subfile{body-matter/3r/Topologia.tex}
+	\subfile{body-matter/3r/Probabilitat.tex}
+	\subfile{body-matter/3r/EDOS1.tex}
+	\subfile{body-matter/3r/Galois.tex}
+	\subfile{body-matter/3r/Complexa.tex}
+	\subfile{body-matter/3r/Estadistica.tex}
+	\subfile{body-matter/3r/GeoDiferencial.tex}
+	\subfile{body-matter/3r/EDOS2.tex}
+	%\subfile{body-matter/3r/CalculTensorial.tex}
+%	\subfile{body-matter/3r/Apendix3r.tex} % Formes diferencials (?) 
 }										  % Tensor calculus (YouTube)
 										  % Àlgebra homològica (Aquesta queda molt lluny, no crec)
 
