Lowercase front-matter files

--- a/Main.tex
+++ b/Main.tex
@@ -352,7 +352,7 @@
 		\rule{\unitlength}{0.4pt}\vspace*{-\baselineskip}\vspace{3.2pt}
 		\rule{\unitlength}{1.6pt}%\\[\baselineskip]
 		\vfill
-		{\centering\includegraphics{front-matter/Portada/portada.pdf}}
+		{\centering\includegraphics{front-matter/portada/portada.pdf}}
 		\vfill
 		{\large\scshape\subtitol}\\[\baselineskip]
 		{\small\scshape\promocio}\par
@@ -459,10 +459,10 @@
 %\newcommand{\foreword}{} % Aure % Buscar com es diu en català. Potser dir-li prefaci i ja
 \newcommand{\prefaci}{}
 \newcommand{\agraiments}{
-	\subfile{front-matter/Agraiments.tex}
+	\subfile{front-matter/agraiments.tex}
 }
 \newcommand{\lletresgregues}{
-	\subfile{front-matter/LletresGregues.tex}
+	\subfile{front-matter/lletres-gregues.tex}
 }
 \newcommand{\introduccio}{} % States the purpose and goals of the following writing
 
