--- a/body-matter/3r/analisi-complexa.tex
+++ b/body-matter/3r/analisi-complexa.tex
@@ -12,18 +12,22 @@
 %		\[\field{C}=\{\alpha+\beta\iu\mid\alpha,\beta\in\field{R}\}.\]
 	\end{notation}
 	\begin{definition}[Suma de nombres complexos]
-		\labelname{suma de nombres complexos}\label{def:suma de nombres complexos}
-		Siguin \(a+b\iu\) i \(c+d\iu\) dos nombres complexos. Aleshores definim la seva suma com
+		\labelname{suma de nombres complexos}
+        \label{def:suma de nombres complexos}
+		Siguin \(a+b\iu\) i \(c+d\iu\) dos nombres complexos.
+        Aleshores definim la seva suma com
 		\[(a+b\iu)+(c+d\iu)=(a+c)+(b+d)\iu.\]
 	\end{definition}
 	\begin{observation}
 		\label{obs:els nombres complexos estan tancats per la suma}
-		Siguin \(a+b\iu\) i \(c+d\iu\) dos nombres complexos. Aleshores
+		Siguin \(a+b\iu\) i \(c+d\iu\) dos nombres complexos.
+        Aleshores
 		\[(a+b\iu+c+d\iu)\in\field{C}\]
 	\end{observation}
 	\begin{proposition}
 		\label{prop:els nombres complexos commuten per la suma}
-		Siguin \(a+b\iu\) i \(c+d\iu\) dos nombres complexos. Aleshores
+		Siguin \(a+b\iu\) i \(c+d\iu\) dos nombres complexos.
+        Aleshores
 		\[(a+b\iu)+(c+d\iu)=(c+d\iu)+(a+b\iu).\]
 		\begin{proof}
 			Per la definició de \myref{def:suma de nombres complexos} tenim
@@ -35,7 +39,8 @@
 	\end{proposition}
 	\begin{proposition}
 		\label{prop:els nombres complexos són associatius per la suma}
-		Siguin \(a+b\iu\), \(c+d\iu\) i \(u+v\iu\) tres nombres complexos. Aleshores
+		Siguin \(a+b\iu\), \(c+d\iu\) i \(u+v\iu\) tres nombres complexos.
+        Aleshores
 		\[(a+b\iu)+\big((c+d\iu)+(u+v\iu)\big)=\big((a+b\iu)+(c+d\iu)\big)+(u+v\iu).\]
 		\begin{proof}
 			Per la definició de \myref{def:suma de nombres complexos} tenim
@@ -50,7 +55,8 @@
 	\end{proposition}
 	\begin{proposition}
 		\label{prop:element neutre per la suma dels complexos}
-		Sigui \(a+b\iu\) un nombre complex. Aleshores
+		Sigui \(a+b\iu\) un nombre complex.
+        Aleshores
 		\[(a+b\iu)+0=a+b\iu.\]
 		\begin{proof}
 			Per la definició de \myref{def:suma de nombres complexos} tenim
@@ -59,7 +65,8 @@
 	\end{proposition}
 	\begin{proposition}
 		\label{prop:element invers per la suma dels complexos}
-		Sigui \(a+b\iu\) un nombre complex. Aleshores
+		Sigui \(a+b\iu\) un nombre complex.
+        Aleshores
 		\[(a+b\iu)+(-a-b\iu)=0.\]
 		\begin{proof}
 			Per la definició de \myref{def:suma de nombres complexos} tenim
@@ -68,17 +75,20 @@
 	\end{proposition}
 	\begin{definition}[Producte de nombres complexos]
 		\labelname{producte de nombres complexos}\label{def:producte de nombres complexos}
-		Siguin \(a+b\iu\) i \(c+d\iu\) dos nombres complexos. Aleshores definim el seu producte com
+		Siguin \(a+b\iu\) i \(c+d\iu\) dos nombres complexos.
+        Aleshores definim el seu producte com
 		\[(a+b\iu)\cdot(c+d\iu)=(ac-bd)+(ad+bc)\iu.\]
 	\end{definition}
 	\begin{observation}
 		\label{obs:els nombres complexos estan tancats pel producte}
-		Siguin \(a+b\iu\) i \(c+d\iu\) dos nombres complexos. Aleshores
+		Siguin \(a+b\iu\) i \(c+d\iu\) dos nombres complexos.
+        Aleshores
 		\[(a+b\iu)(c+d\iu)\in\field{C}.\]
 	\end{observation}
 	\begin{proposition}
 		\label{prop:els nombres complexos commuten pel producte}
-		Siguin \(a+b\iu\) i \(c+d\iu\) dos nombres complexos. Aleshores
+		Siguin \(a+b\iu\) i \(c+d\iu\) dos nombres complexos.
+        Aleshores
 		\[(a+b\iu)(c+d\iu)=(c+d\iu)(a+b\iu).\]
 		\begin{proof}
 			Per la definició de \myref{def:producte de nombres complexos} tenim
@@ -90,10 +100,12 @@
 	\end{proposition}
 	\begin{proposition}
 		\label{prop:els nombres complexos són associatius pel producte}
-		Siguin \(a+b\iu\), \(c+d\iu\) i \(u+v\iu\) tres nombres complexos. Aleshores
+		Siguin \(a+b\iu\), \(c+d\iu\) i \(u+v\iu\) tres nombres complexos.
+        Aleshores
 		\[(a+b\iu)\big((c+d\iu)(u+v\iu))\big)=\big((a+b\iu)(c+d\iu)\big)(u+v\iu).\]
 		\begin{proof}
-			Prenem \(\alpha=a+b\iu\), \(\beta=c+d\iu\) i \(\gamma=u+v\iu\). Per la definició de \myref{def:producte de nombres complexos} tenim
+			Prenem \(\alpha=a+b\iu\), \(\beta=c+d\iu\) i \(\gamma=u+v\iu\).
+            Per la definició de \myref{def:producte de nombres complexos} tenim
 			\begin{align*}
 				\alpha\big(\beta\gamma\big)&=(a+b\iu)\big((c+d\iu)(u+v\iu)\big) \\
 				&=(a+b\iu)\big((cu-dv)+(cv+du)\iu\big) \\
@@ -108,7 +120,8 @@
 	\end{proposition}
 	\begin{proposition}
 		\label{prop:element neutre pel producte dels complexos}
-		Sigui \(a+b\iu\) un nombre complex. Aleshores
+		Sigui \(a+b\iu\) un nombre complex.
+        Aleshores
 		\[(a+b\iu)\cdot1=a+b\iu.\]
 		\begin{proof}
 			Per la definició de \myref{def:producte de nombres complexos} tenim
@@ -117,7 +130,8 @@
 	\end{proposition}
 	\begin{proposition}
 		\label{prop:element invers pel producte de nombres complexos}
-		Sigui \(a+b\iu\) un nombre complex. Aleshores
+		Sigui \(a+b\iu\) un nombre complex.
+        Aleshores
 		\[(a+b\iu)\Big(\frac{a}{a^{2}+b^{2}}+\frac{-b}{a^{2}+b^{2}}\iu\Big)=1.\]
 		\begin{proof}
 			Per la definició de \myref{def:producte de nombres complexos} tenim
@@ -129,7 +143,8 @@
 	\end{proposition}
 	\begin{proposition}
 		\label{prop:distribuitva del producte respecte la suma de nombres complexos}
-		Siguin \(a+b\iu\), \(c+d\iu\) i \(u+v\iu\) tres nombres complexos. Aleshores
+		Siguin \(a+b\iu\), \(c+d\iu\) i \(u+v\iu\) tres nombres complexos.
+        Aleshores
 		\[(a+b\iu)\big((c+d\iu)+(u+v\iu)\big)=(a+b\iu)(c+d\iu)+(a+b\iu)(u+v\iu).\]
 		\begin{proof}
 			Per la definició de \myref{def:suma de nombres complexos} i \myref{def:producte de nombres complexos} tenim
@@ -150,16 +165,19 @@
 	\subsection{Propietats de nombres complexos}
 	\begin{definition}[Conjugat d'un nombre complex]
 		\labelname{conjugat d'un nombre complex}\label{def:conjugat d'un nombre complex}
-		Sigui \(z=a+b\iu\) un nombre complex. Aleshores definim
+		Sigui \(z=a+b\iu\) un nombre complex.
+        Aleshores definim
 		\[\conjugat{z}=a-b\iu\]
 		com el conjugat de \(z\).
 	\end{definition}
 	\begin{proposition}
 		\label{prop:el conjugat del conjugat d'un nombre complex és ell mateix}
-		Sigui \(z\) un nombre complex. Aleshores
+		Sigui \(z\) un nombre complex.
+        Aleshores
 		\[\conjugat{\conjugat{z}}=z.\]
 		\begin{proof}
-			Per la definició de \myref{def:nombre complex} tenim que existeixen \(a\), \(b\in\field{R}\) tals que \(z=a+b\iu\). Aleshores per la definició de \myref{def:conjugat d'un nombre complex} tenim que
+			Per la definició de \myref{def:nombre complex} tenim que existeixen \(a\), \(b\in\field{R}\) tals que \(z=a+b\iu\).
+            Aleshores per la definició de \myref{def:conjugat d'un nombre complex} tenim que
 			\begin{align*}
 				\conjugat{\conjugat{z}}&=\conjugat{\conjugat{a+b\iu}} \\
 				&=\conjugat{a-b\iu} \\
@@ -169,7 +187,8 @@
 	\end{proposition}
 	\begin{proposition}
 		\label{prop:el conjugat de la suma és la suma de conjugats}
-		Siguin \(z\) i \(w\) dos nombres complexos. Aleshores
+		Siguin \(z\) i \(w\) dos nombres complexos.
+        Aleshores
 		\[\conjugat{z+w}=\conjugat{z}+\conjugat{w}.\]
 		\begin{proof}
 			Per la definició de \myref{def:nombre complex} tenim que existeixen \(a\), \(b\), \(c\), \(d\in\field{R}\) tals que
@@ -186,7 +205,8 @@
 	\end{proposition}
 	\begin{proposition}
 		\label{prop:el conjugat del producte és el producte de conjugats}
-		Siguin \(z\) i \(w\) dos nombres complexos. Aleshores
+		Siguin \(z\) i \(w\) dos nombres complexos.
+        Aleshores
 		\[\conjugat{zw}=\conjugat{z}\,\conjugat{w}.\]
 		\begin{proof}
 			Per la definició de \myref{def:nombre complex} tenim que existeixen \(a\), \(b\), \(c\), \(d\in\field{R}\) tals que
@@ -204,7 +224,8 @@
 	\end{proposition}
 	\begin{proposition}
 		\label{prop:el producte d'un nombre complex pel seu conjugat és la suma dels quadrats de la seva part real i imaginaria}
-		Sigui \(z=a+b\iu\) un nombre complex. Aleshores
+		Sigui \(z=a+b\iu\) un nombre complex.
+        Aleshores
 		\[z\conjugat{z}=a^{2}+b^{2}.\]
 		\begin{proof}
 			Per la definició de \myref{def:producte de nombres complexos} i la definició de \myref{def:conjugat d'un nombre complex} trobem que
@@ -216,19 +237,23 @@
 	\end{proposition}
 	\begin{proposition}
 		\label{prop:un nombre complex és igual al seu conjugat si i només si és un real}
-		Sigui \(z\) un nombre complex. Aleshores \(z=\conjugat{z}\) si i només si \(z\in\field{R}\).
+		Sigui \(z\) un nombre complex.
+        Aleshores \(z=\conjugat{z}\) si i només si \(z\in\field{R}\).
 		\begin{proof}
-			Per la definició de \myref{def:nombre complex} tenim que existeixen \(a\), \(b\in\field{R}\) tals que \(z=a+b\iu\). Aleshores si tenim \(z=\conjugat{z}\), per la definició de \myref{def:conjugat d'un nombre complex} trobem que
+			Per la definició de \myref{def:nombre complex} tenim que existeixen \(a\), \(b\in\field{R}\) tals que \(z=a+b\iu\).
+            Aleshores si tenim \(z=\conjugat{z}\), per la definició de \myref{def:conjugat d'un nombre complex} trobem que
 			\[a+b\iu=a-b\iu,\]
 			que és equivalent a \(b=-b\), i per tant ha de ser \(b=0\) i trobem que \(z=a\in\field{R}\).
 		\end{proof}
 	\end{proposition}
 	\begin{proposition}
 		\label{prop:inversa d'un nombre complex en funció del seu conjugat}
-		Sigui \(z\neq0\) un nombre complex. Aleshores
+		Sigui \(z\neq0\) un nombre complex.
+        Aleshores
 		\[z^{-1}=\frac{\conjugat{z}}{z\conjugat{z}}.\]
 		\begin{proof}
-			Per la definició de \myref{def:nombre complex} tenim que existeixen \(a\), \(b\in\field{R}\) tals que \(z=a+b\iu\). Aleshores tenim que
+			Per la definició de \myref{def:nombre complex} tenim que existeixen \(a\), \(b\in\field{R}\) tals que \(z=a+b\iu\).
+            Aleshores tenim que
 			\begin{align*}
 				z\frac{\conjugat{z}}{z\conjugat{z}}&=\frac{z\conjugat{z}}{z\conjugat{z}} \\
 				&=\frac{a^{2}+b^{2}}{a^{2}+b^{2}}=1 \tag{\ref{prop:el producte d'un nombre complex pel seu conjugat és la suma dels quadrats de la seva part real i imaginaria}}
@@ -240,7 +265,8 @@
 		\labelname{part real i part imaginària d'un nombre complex}\label{def:part real i part imaginària d'un nombre complex}
 		\labelname{part real d'un nombre complex}\label{def:part real d'un nombre complex}
 		\labelname{part imaginària d'un nombre complex}\label{def:part imaginària d'un nombre complex}
-		Sigui \(z=a+b\iu\) un nombre complex. Aleshores definim
+		Sigui \(z=a+b\iu\) un nombre complex.
+        Aleshores definim
 		\[\Re(z)=a\]
 		com la part real de \(z\) i
 		\[\Im(z)=b\]
@@ -250,10 +276,12 @@
 		\label{prop:fórmules per la part real i part imaginària d'un nombre complex}
 		\label{prop:fórmula per la part real d'un nombre complex}
 		\label{prop:fórmula per la part imaginària d'un nombre complex}
-		Sigui \(z\) un nombre complex. Aleshores
+		Sigui \(z\) un nombre complex.
+        Aleshores
 		\[\Re(z)=\frac{z+\conjugat{z}}{2}\qquad\text{i}\qquad\Im(z)=\frac{z-\conjugat{z}}{2\iu}.\]
 		\begin{proof}
-			Per la definició de \myref{def:nombre complex} tenim que existeixen \(a\), \(b\in\field{R}\) tals que \(z=a+b\iu\). Aleshores tenim que
+			Per la definició de \myref{def:nombre complex} tenim que existeixen \(a\), \(b\in\field{R}\) tals que \(z=a+b\iu\).
+            Aleshores tenim que
 			\[\frac{z+\conjugat{z}}{2}=\frac{a+b\iu+a-b\iu}{2}=\frac{2a}{2}=a=\Re(z),\]
 			i
 			\[\frac{z-\conjugat{z}}{2\iu}=\frac{a+b\iu-a+b\iu}{2\iu}=\frac{2b\iu}{2\iu}=b=\Im(z),\]
@@ -263,7 +291,8 @@
 	\subsection{Topologia de nombres complexos}
 	\begin{definition}[Mòdul d'un nombre complex]
 		\labelname{mòdul d'un nombre complex}\label{def:mòdul d'un nombre complex}
-		Sigui \(z=a+b\iu\) un nombre complex. Aleshores definim el seu mòdul com
+		Sigui \(z=a+b\iu\) un nombre complex.
+        Aleshores definim el seu mòdul com
 		\[\modul{z}=\sqrt{a^{2}+b^{2}}.\]
 	\end{definition}
 	\begin{observation}
@@ -274,7 +303,8 @@
 	\end{observation}
 	\begin{proposition}
 		\label{prop:el mòdul d'un nombre complex és l'arrel del nombre pel seu conjugat}
-		Sigui \(z\) un nombre complex. Aleshores es satisfà
+		Sigui \(z\) un nombre complex.
+        Aleshores es satisfà
 		\[\modul{z}=\sqrt{z\conjugat{z}}.\]
 		\begin{proof}
 			Per la definició de \myref{def:nombre complex} tenim que \(z=a+b\iu\), i per la proposició \myref{prop:el producte d'un nombre complex pel seu conjugat és la suma dels quadrats de la seva part real i imaginaria} trobem que
@@ -288,7 +318,8 @@
 	\end{proposition}
 	\begin{proposition}[Desigualtat triangular]
 		\labelname{desigualtat triangular}\label{prop:desigualta triangular nombres complexos}
-		Siguin \(z\) i \(w\) dos nombres complexos. Aleshores
+		Siguin \(z\) i \(w\) dos nombres complexos.
+        Aleshores
 		\[\modul{z+w}\leq\modul{z}+\modul{w}.\]
 		\begin{proof}
 			Per la definició de \myref{def:mòdul d'un nombre complex} tenim que
