--- a/body-matter/3r/analisi-complexa.tex
+++ b/body-matter/3r/analisi-complexa.tex
@@ -8,7 +8,9 @@
 	\begin{notation}[Conjunt de nombres complexos]
 		\label{notation:cos de nombres complexos}
 		Denotarem
-		\[\field{C}=\{a+b\iu\mid a,b\in\field{R}\}.\]
+		\[
+            \field{C}=\{a+b\iu\mid a,b\in\field{R}\}.
+        \]
 %		\[\field{C}=\{\alpha+\beta\iu\mid\alpha,\beta\in\field{R}\}.\]
 	\end{notation}
 	\begin{definition}[Suma de nombres complexos]
@@ -16,19 +18,25 @@
         \label{def:suma de nombres complexos}
 		Siguin \(a+b\iu\) i \(c+d\iu\) dos nombres complexos.
         Aleshores definim la seva suma com
-		\[(a+b\iu)+(c+d\iu)=(a+c)+(b+d)\iu.\]
+		\[
+            (a+b\iu)+(c+d\iu)=(a+c)+(b+d)\iu.
+        \]
 	\end{definition}
 	\begin{observation}
 		\label{obs:els nombres complexos estan tancats per la suma}
 		Siguin \(a+b\iu\) i \(c+d\iu\) dos nombres complexos.
         Aleshores
-		\[(a+b\iu+c+d\iu)\in\field{C}\]
+		\[
+            (a+b\iu+c+d\iu)\in\field{C}
+        \]
 	\end{observation}
 	\begin{proposition}
 		\label{prop:els nombres complexos commuten per la suma}
 		Siguin \(a+b\iu\) i \(c+d\iu\) dos nombres complexos.
         Aleshores
-		\[(a+b\iu)+(c+d\iu)=(c+d\iu)+(a+b\iu).\]
+		\[
+            (a+b\iu)+(c+d\iu)=(c+d\iu)+(a+b\iu).
+        \]
 		\begin{proof}
 			Per la definició de \myref{def:suma de nombres complexos} tenim
 			\begin{align*}
@@ -41,7 +49,9 @@
 		\label{prop:els nombres complexos són associatius per la suma}
 		Siguin \(a+b\iu\), \(c+d\iu\) i \(u+v\iu\) tres nombres complexos.
         Aleshores
-		\[(a+b\iu)+\big((c+d\iu)+(u+v\iu)\big)=\big((a+b\iu)+(c+d\iu)\big)+(u+v\iu).\]
+		\[
+            (a+b\iu)+\big((c+d\iu)+(u+v\iu)\big)=\big((a+b\iu)+(c+d\iu)\big)+(u+v\iu).
+        \]
 		\begin{proof}
 			Per la definició de \myref{def:suma de nombres complexos} tenim
 			\begin{align*}
@@ -57,39 +67,53 @@
 		\label{prop:element neutre per la suma dels complexos}
 		Sigui \(a+b\iu\) un nombre complex.
         Aleshores
-		\[(a+b\iu)+0=a+b\iu.\]
+		\[
+            (a+b\iu)+0=a+b\iu.
+        \]
 		\begin{proof}
 			Per la definició de \myref{def:suma de nombres complexos} tenim
-			\[(a+b\iu)+0=(a+0)+(b+0)\iu=a+b\iu.\qedhere\]
+			\[
+                (a+b\iu)+0=(a+0)+(b+0)\iu=a+b\iu.\qedhere
+            \]
 		\end{proof}
 	\end{proposition}
 	\begin{proposition}
 		\label{prop:element invers per la suma dels complexos}
 		Sigui \(a+b\iu\) un nombre complex.
         Aleshores
-		\[(a+b\iu)+(-a-b\iu)=0.\]
+		\[
+            (a+b\iu)+(-a-b\iu)=0.
+        \]
 		\begin{proof}
 			Per la definició de \myref{def:suma de nombres complexos} tenim
-			\[(a+b\iu)+(-a-b\iu)=(a-a)+(b-b)\iu=0.\qedhere\]
+			\[
+                (a+b\iu)+(-a-b\iu)=(a-a)+(b-b)\iu=0.\qedhere
+            \]
 		\end{proof}
 	\end{proposition}
 	\begin{definition}[Producte de nombres complexos]
 		\labelname{producte de nombres complexos}\label{def:producte de nombres complexos}
 		Siguin \(a+b\iu\) i \(c+d\iu\) dos nombres complexos.
         Aleshores definim el seu producte com
-		\[(a+b\iu)\cdot(c+d\iu)=(ac-bd)+(ad+bc)\iu.\]
+		\[
+            (a+b\iu)\cdot(c+d\iu)=(ac-bd)+(ad+bc)\iu.
+        \]
 	\end{definition}
 	\begin{observation}
 		\label{obs:els nombres complexos estan tancats pel producte}
 		Siguin \(a+b\iu\) i \(c+d\iu\) dos nombres complexos.
         Aleshores
-		\[(a+b\iu)(c+d\iu)\in\field{C}.\]
+		\[
+            (a+b\iu)(c+d\iu)\in\field{C}.
+        \]
 	\end{observation}
 	\begin{proposition}
 		\label{prop:els nombres complexos commuten pel producte}
 		Siguin \(a+b\iu\) i \(c+d\iu\) dos nombres complexos.
         Aleshores
-		\[(a+b\iu)(c+d\iu)=(c+d\iu)(a+b\iu).\]
+		\[
+            (a+b\iu)(c+d\iu)=(c+d\iu)(a+b\iu).
+        \]
 		\begin{proof}
 			Per la definició de \myref{def:producte de nombres complexos} tenim
 			\begin{align*}
@@ -102,7 +126,9 @@
 		\label{prop:els nombres complexos són associatius pel producte}
 		Siguin \(a+b\iu\), \(c+d\iu\) i \(u+v\iu\) tres nombres complexos.
         Aleshores
-		\[(a+b\iu)\big((c+d\iu)(u+v\iu))\big)=\big((a+b\iu)(c+d\iu)\big)(u+v\iu).\]
+		\[
+            (a+b\iu)\big((c+d\iu)(u+v\iu))\big)=\big((a+b\iu)(c+d\iu)\big)(u+v\iu).
+        \]
 		\begin{proof}
 			Prenem \(\alpha=a+b\iu\), \(\beta=c+d\iu\) i \(\gamma=u+v\iu\).
             Per la definició de \myref{def:producte de nombres complexos} tenim
@@ -122,17 +148,23 @@
 		\label{prop:element neutre pel producte dels complexos}
 		Sigui \(a+b\iu\) un nombre complex.
         Aleshores
-		\[(a+b\iu)\cdot1=a+b\iu.\]
+		\[
+            (a+b\iu)\cdot1=a+b\iu.
+        \]
 		\begin{proof}
 			Per la definició de \myref{def:producte de nombres complexos} tenim
-			\[(a+b\iu)\cdot1=(a\cdot1)+(b\cdot1)\iu=a+b\iu.\qedhere\]
+			\[
+                (a+b\iu)\cdot1=(a\cdot1)+(b\cdot1)\iu=a+b\iu.\qedhere
+            \]
 		\end{proof}
 	\end{proposition}
 	\begin{proposition}
 		\label{prop:element invers pel producte de nombres complexos}
 		Sigui \(a+b\iu\) un nombre complex.
         Aleshores
-		\[(a+b\iu)\Big(\frac{a}{a^{2}+b^{2}}+\frac{-b}{a^{2}+b^{2}}\iu\Big)=1.\]
+		\[
+            (a+b\iu)\Big(\frac{a}{a^{2}+b^{2}}+\frac{-b}{a^{2}+b^{2}}\iu\Big)=1.
+        \]
 		\begin{proof}
 			Per la definició de \myref{def:producte de nombres complexos} tenim
 			\begin{align*}
@@ -145,7 +177,9 @@
 		\label{prop:distribuitva del producte respecte la suma de nombres complexos}
 		Siguin \(a+b\iu\), \(c+d\iu\) i \(u+v\iu\) tres nombres complexos.
         Aleshores
-		\[(a+b\iu)\big((c+d\iu)+(u+v\iu)\big)=(a+b\iu)(c+d\iu)+(a+b\iu)(u+v\iu).\]
+		\[
+            (a+b\iu)\big((c+d\iu)+(u+v\iu)\big)=(a+b\iu)(c+d\iu)+(a+b\iu)(u+v\iu).
+        \]
 		\begin{proof}
 			Per la definició de \myref{def:suma de nombres complexos} i \myref{def:producte de nombres complexos} tenim
 			\begin{align*}
@@ -167,14 +201,18 @@
 		\labelname{conjugat d'un nombre complex}\label{def:conjugat d'un nombre complex}
 		Sigui \(z=a+b\iu\) un nombre complex.
         Aleshores definim
-		\[\conjugat{z}=a-b\iu\]
+		\[
+            \conjugat{z}=a-b\iu
+        \]
 		com el conjugat de \(z\).
 	\end{definition}
 	\begin{proposition}
 		\label{prop:el conjugat del conjugat d'un nombre complex és ell mateix}
 		Sigui \(z\) un nombre complex.
         Aleshores
-		\[\conjugat{\conjugat{z}}=z.\]
+		\[
+            \conjugat{\conjugat{z}}=z.
+        \]
 		\begin{proof}
 			Per la definició de \myref{def:nombre complex} tenim que existeixen \(a\), \(b\in\field{R}\) tals que \(z=a+b\iu\).
             Aleshores per la definició de \myref{def:conjugat d'un nombre complex} tenim que
@@ -189,10 +227,14 @@
 		\label{prop:el conjugat de la suma és la suma de conjugats}
 		Siguin \(z\) i \(w\) dos nombres complexos.
         Aleshores
-		\[\conjugat{z+w}=\conjugat{z}+\conjugat{w}.\]
+		\[
+            \conjugat{z+w}=\conjugat{z}+\conjugat{w}.
+        \]
 		\begin{proof}
 			Per la definició de \myref{def:nombre complex} tenim que existeixen \(a\), \(b\), \(c\), \(d\in\field{R}\) tals que
-			\[z=a+b\iu\qquad\text{i}\qquad w=c+d\iu.\]
+			\[
+                z=a+b\iu\qquad\text{i}\qquad w=c+d\iu.
+            \]
 			Aleshores per la definició de \myref{def:suma de nombres complexos} i la definició de \myref{def:conjugat d'un nombre complex} trobem que
 			\begin{align*}
 				\conjugat{z+w}&=\conjugat{(a+b\iu)+(c+d\iu)} \\
@@ -207,10 +249,14 @@
 		\label{prop:el conjugat del producte és el producte de conjugats}
 		Siguin \(z\) i \(w\) dos nombres complexos.
         Aleshores
-		\[\conjugat{zw}=\conjugat{z}\,\conjugat{w}.\]
+		\[
+            \conjugat{zw}=\conjugat{z}\,\conjugat{w}.
+        \]
 		\begin{proof}
 			Per la definició de \myref{def:nombre complex} tenim que existeixen \(a\), \(b\), \(c\), \(d\in\field{R}\) tals que
-			\[z=a+b\iu\qquad\text{i}\qquad w=c+d\iu.\]
+			\[
+                z=a+b\iu\qquad\text{i}\qquad w=c+d\iu.
+            \]
 			Aleshores per la definició de \myref{def:producte de nombres complexos} i la definició de \myref{def:conjugat d'un nombre complex} trobem que
 			\begin{align*}
 				\conjugat{zw}&=\conjugat{(a+b\iu)(c+d\iu)} \\
@@ -226,7 +272,9 @@
 		\label{prop:el producte d'un nombre complex pel seu conjugat és la suma dels quadrats de la seva part real i imaginaria}
 		Sigui \(z=a+b\iu\) un nombre complex.
         Aleshores
-		\[z\conjugat{z}=a^{2}+b^{2}.\]
+		\[
+            z\conjugat{z}=a^{2}+b^{2}.
+        \]
 		\begin{proof}
 			Per la definició de \myref{def:producte de nombres complexos} i la definició de \myref{def:conjugat d'un nombre complex} trobem que
 			\begin{align*}
@@ -242,7 +290,9 @@
 		\begin{proof}
 			Per la definició de \myref{def:nombre complex} tenim que existeixen \(a\), \(b\in\field{R}\) tals que \(z=a+b\iu\).
             Aleshores si tenim \(z=\conjugat{z}\), per la definició de \myref{def:conjugat d'un nombre complex} trobem que
-			\[a+b\iu=a-b\iu,\]
+			\[
+                a+b\iu=a-b\iu,
+            \]
 			que és equivalent a \(b=-b\), i per tant ha de ser \(b=0\) i trobem que \(z=a\in\field{R}\).
 		\end{proof}
 	\end{proposition}
@@ -250,7 +300,9 @@
 		\label{prop:inversa d'un nombre complex en funció del seu conjugat}
 		Sigui \(z\neq0\) un nombre complex.
         Aleshores
-		\[z^{-1}=\frac{\conjugat{z}}{z\conjugat{z}}.\]
+		\[
+            z^{-1}=\frac{\conjugat{z}}{z\conjugat{z}}.
+        \]
 		\begin{proof}
 			Per la definició de \myref{def:nombre complex} tenim que existeixen \(a\), \(b\in\field{R}\) tals que \(z=a+b\iu\).
             Aleshores tenim que
@@ -267,9 +319,13 @@
 		\labelname{part imaginària d'un nombre complex}\label{def:part imaginària d'un nombre complex}
 		Sigui \(z=a+b\iu\) un nombre complex.
         Aleshores definim
-		\[\Re(z)=a\]
+		\[
+            \Re(z)=a
+        \]
 		com la part real de \(z\) i
-		\[\Im(z)=b\]
+		\[
+            \Im(z)=b
+        \]
 		com la part imaginària de \(z\).
 	\end{definition}
 	\begin{proposition}
@@ -278,13 +334,19 @@
 		\label{prop:fórmula per la part imaginària d'un nombre complex}
 		Sigui \(z\) un nombre complex.
         Aleshores
-		\[\Re(z)=\frac{z+\conjugat{z}}{2}\qquad\text{i}\qquad\Im(z)=\frac{z-\conjugat{z}}{2\iu}.\]
+		\[
+            \Re(z)=\frac{z+\conjugat{z}}{2}\qquad\text{i}\qquad\Im(z)=\frac{z-\conjugat{z}}{2\iu}.
+        \]
 		\begin{proof}
 			Per la definició de \myref{def:nombre complex} tenim que existeixen \(a\), \(b\in\field{R}\) tals que \(z=a+b\iu\).
             Aleshores tenim que
-			\[\frac{z+\conjugat{z}}{2}=\frac{a+b\iu+a-b\iu}{2}=\frac{2a}{2}=a=\Re(z),\]
+			\[
+                \frac{z+\conjugat{z}}{2}=\frac{a+b\iu+a-b\iu}{2}=\frac{2a}{2}=a=\Re(z),
+            \]
 			i
-			\[\frac{z-\conjugat{z}}{2\iu}=\frac{a+b\iu-a+b\iu}{2\iu}=\frac{2b\iu}{2\iu}=b=\Im(z),\]
+			\[
+                \frac{z-\conjugat{z}}{2\iu}=\frac{a+b\iu-a+b\iu}{2\iu}=\frac{2b\iu}{2\iu}=b=\Im(z),
+            \]
 			i per la definició de \myref{def:part real i part imaginària d'un nombre complex} hem acabat.
 		\end{proof}
 	\end{proposition}
@@ -293,7 +355,9 @@
 		\labelname{mòdul d'un nombre complex}\label{def:mòdul d'un nombre complex}
 		Sigui \(z=a+b\iu\) un nombre complex.
         Aleshores definim el seu mòdul com
-		\[\modul{z}=\sqrt{a^{2}+b^{2}}.\]
+		\[
+            \modul{z}=\sqrt{a^{2}+b^{2}}.
+        \]
 	\end{definition}
 	\begin{observation}
 		\label{obs:les parts real i imaginàries d'un complex són menors que el seu mòdul}
@@ -305,7 +369,9 @@
 		\label{prop:el mòdul d'un nombre complex és l'arrel del nombre pel seu conjugat}
 		Sigui \(z\) un nombre complex.
         Aleshores es satisfà
-		\[\modul{z}=\sqrt{z\conjugat{z}}.\]
+		\[
+            \modul{z}=\sqrt{z\conjugat{z}}.
+        \]
 		\begin{proof}
 			Per la definició de \myref{def:nombre complex} tenim que \(z=a+b\iu\), i per la proposició \myref{prop:el producte d'un nombre complex pel seu conjugat és la suma dels quadrats de la seva part real i imaginaria} trobem que
 			\begin{align*}
@@ -313,14 +379,18 @@
 				&=\big(\sqrt{a^{2}+b^{2}}\big)^{2}=\modul{z}^{2}, \tag{\ref{def:mòdul d'un nombre complex}}
 			\end{align*}
 			i per tant 
-			\[\modul{z}=\sqrt{z\conjugat{z}}.\qedhere\]
+			\[
+                \modul{z}=\sqrt{z\conjugat{z}}.\qedhere
+            \]
 		\end{proof}
 	\end{proposition}
 	\begin{proposition}[Desigualtat triangular]
 		\labelname{desigualtat triangular}\label{prop:desigualta triangular nombres complexos}
 		Siguin \(z\) i \(w\) dos nombres complexos.
         Aleshores
-		\[\modul{z+w}\leq\modul{z}+\modul{w}.\]
+		\[
+            \modul{z+w}\leq\modul{z}+\modul{w}.
+        \]
 		\begin{proof}
 			Per la definició de \myref{def:mòdul d'un nombre complex} tenim que
 			\begin{align*}
