Fix most long lines

--- a/body-matter/3r/analisi-complexa.tex
+++ b/body-matter/3r/analisi-complexa.tex
@@ -50,16 +50,18 @@
 		Siguin \(a+b\iu\), \(c+d\iu\) i \(u+v\iu\) tres nombres complexos.
         Aleshores
 		\[
-            (a+b\iu)+\big((c+d\iu)+(u+v\iu)\big) = \big((a+b\iu)+(c+d\iu)\big)+(u+v\iu).
+            (a+b\iu)+\big((c+d\iu)+(u+v\iu)\big)
+            = \big((a+b\iu)+(c+d\iu)\big)+(u+v\iu).
         \]
 		\begin{proof}
 			Per la definició de \myref{def:suma de nombres complexos} tenim
 			\begin{align*}
-				(a+b\iu)+\big((c+d\iu)+(u+v\iu)\big) &= (a+b\iu)+\big((c+u)+(d+v)\iu\big) \\
-				 &= \big(a+(c+u)\big)+\big(b+(d+v)\big)\iu \\
-				 &= \big((a+c)+u\big)+\big((b+d)+v\big)\iu \\
-				 &= \big((a+c)+(b+d)\iu\big)+(u+v\iu) \\
-				 &= \big((a+b\iu)+(c+d\iu)\big)+(u+v\iu).\qedhere
+                (a+b\iu)+\big((c+d\iu)+(u+v\iu)\big)
+                    &= (a+b\iu)+\big((c+u)+(d+v)\iu\big) \\
+                    &= \big(a+(c+u)\big)+\big(b+(d+v)\big)\iu \\
+                    &= \big((a+c)+u\big)+\big((b+d)+v\big)\iu \\
+                    &= \big((a+c)+(b+d)\iu\big)+(u+v\iu) \\
+                    &= \big((a+b\iu)+(c+d\iu)\big)+(u+v\iu).\qedhere
 			\end{align*}
 		\end{proof}
 	\end{proposition}
@@ -92,7 +94,8 @@
 		\end{proof}
 	\end{proposition}
 	\begin{definition}[Producte de nombres complexos]
-		\labelname{producte de nombres complexos}\label{def:producte de nombres complexos}
+		\labelname{producte de nombres complexos}
+        \label{def:producte de nombres complexos}
 		Siguin \(a+b\iu\) i \(c+d\iu\) dos nombres complexos.
         Aleshores definim el seu producte com
 		\[
@@ -127,20 +130,26 @@
 		Siguin \(a+b\iu\), \(c+d\iu\) i \(u+v\iu\) tres nombres complexos.
         Aleshores
 		\[
-            (a+b\iu)\big((c+d\iu)(u+v\iu))\big) = \big((a+b\iu)(c+d\iu)\big)(u+v\iu).
+            (a+b\iu)\big((c+d\iu)(u+v\iu))\big)
+            = \big((a+b\iu)(c+d\iu)\big)(u+v\iu).
         \]
 		\begin{proof}
-			Prenem \(\alpha = a+b\iu\), \(\beta = c+d\iu\) i \(\gamma = u+v\iu\).
+			Prenem \(\alpha = a+b\iu\), \(\beta = c+d\iu\)
+            i \(\gamma = u+v\iu\).
             Per la definició de \myref{def:producte de nombres complexos} tenim
 			\begin{align*}
-				\alpha\big(\beta\gamma\big) &= (a+b\iu)\big((c+d\iu)(u+v\iu)\big) \\
-				 &= (a+b\iu)\big((cu-dv)+(cv+du)\iu\big) \\
-				 &= \big(a(cu-dv)-b(cv+du)\big)+\big(a(cv+du)+b(cu-dv)\big)\iu \\
-				 &= (acu-adv-bcv-bdu)+(acv+adu+bcu-bdv)\iu \\
-				 &= (acu-bdu-adv-bcv)+(acv-bdv+adu+bcu)\iu \\
-				 &= \big((ac-bd)u-(ad+bc)v\big)+\big((ac-bd)v+(ad+bc)u\big)\iu \\
-				 &= \big((ac-bd)+(ad+bc)\iu\big)(u+v\iu) \\
-				 &= \big((a+b\iu)(c+d\iu)\big)(u+v\iu) = (\alpha\beta)\gamma.\qedhere
+				\alpha\big(\beta\gamma\big)
+                    &= (a+b\iu)\big((c+d\iu)(u+v\iu)\big) \\
+                    &= (a+b\iu)\big((cu-dv)+(cv+du)\iu\big) \\
+                    &= \big(a(cu-dv)-b(cv+du)\big)
+                       +\big(a(cv+du)+b(cu-dv)\big)\iu \\
+                    &= (acu-adv-bcv-bdu)+(acv+adu+bcu-bdv)\iu \\
+                    &= (acu-bdu-adv-bcv)+(acv-bdv+adu+bcu)\iu \\
+                    &= \big((ac-bd)u-(ad+bc)v\big)
+                       +\big((ac-bd)v+(ad+bc)u\big)\iu \\
+                    &= \big((ac-bd)+(ad+bc)\iu\big)(u+v\iu) \\
+                    &= \big((a+b\iu)(c+d\iu)\big)(u+v\iu)
+                     = (\alpha\beta)\gamma.\qedhere
 			\end{align*}
 		\end{proof}
 	\end{proposition}
@@ -163,13 +172,17 @@
 		Sigui \(a+b\iu\) un nombre complex.
         Aleshores
 		\[
-            (a+b\iu)\Big(\frac{a}{a^{2}+b^{2}}+\frac{-b}{a^{2}+b^{2}}\iu\Big) = 1.
+            (a+b\iu)\Big(\frac{a}{a^{2}+b^{2}} + \frac{-b}{a^{2}+b^{2}}\iu\Big)
+            = 1.
         \]
 		\begin{proof}
 			Per la definició de \myref{def:producte de nombres complexos} tenim
 			\begin{align*}
-				(a+b\iu)\Big(\frac{a}{a^{2}+b^{2}}+\frac{-b}{a^{2}+b^{2}}\iu\Big) &= \Big(\frac{a^{2}}{a^{2}+b^{2}}-\frac{-b^{2}}{a^{2}+b^{2}}\Big)+\Big(\frac{ab}{a^{2}+b^{2}}+\frac{-ba}{a^{2}+b^{2}}\Big)\iu \\
-				 &= \Big(\frac{a^{2}+b^{2}}{a^{2}+b^{2}}\Big)+\Big(\frac{ab-ab}{a^{2}+b^{2}}\Big)\iu = 1.\qedhere
+				(a+b\iu)\Big(\frac{a}{a^{2}+b^{2}}+\frac{-b}{a^{2}+b^{2}}\iu\Big)
+                    &= \Big(\frac{a^{2}}{a^{2}+b^{2}}-\frac{-b^{2}}{a^{2}+b^{2}}\Big)
+                       +\Big(\frac{ab}{a^{2}+b^{2}}+\frac{-ba}{a^{2}+b^{2}}\Big)\iu \\
+                    &= \Big(\frac{a^{2}+b^{2}}{a^{2}+b^{2}}\Big)
+                       +\Big(\frac{ab-ab}{a^{2}+b^{2}}\Big)\iu = 1.\qedhere
 			\end{align*}
 		\end{proof}
 	\end{proposition}
@@ -181,24 +194,28 @@
             (a+b\iu)\big((c+d\iu)+(u+v\iu)\big) = (a+b\iu)(c+d\iu)+(a+b\iu)(u+v\iu).
         \]
 		\begin{proof}
-			Per la definició de \myref{def:suma de nombres complexos} i \myref{def:producte de nombres complexos} tenim
+			Per la definició de \myref{def:suma de nombres complexos}
+            i \myref{def:producte de nombres complexos} tenim
 			\begin{align*}
-				(a+b\iu)\big((c+d\iu)+(u+v\iu)\big) &= (a+b\iu)\big((c+u)+(d+v)\iu\big) \\
-				 &= \big(a(c+u)-b(d+v)\big)+\big(a(d+v)+b(c+u)\big)\iu \\
-				 &= (ac+au-bd-bv)+(ad+av+bc+bu)\iu \\
-				 &= (ac-bd+au-bv)+(ad+bc+av+bu)\iu\\
-				 &= (ac-bd)+(ad+bc)\iu+(au-bv)+(av+bu)\iu \\
-				 &= (a+b\iu)(c+d\iu)+(a+b\iu)(u+v\iu).\qedhere
+				(a+b\iu)\big((c+d\iu)+(u+v\iu)\big)
+                    &= (a+b\iu)\big((c+u)+(d+v)\iu\big) \\
+                    &= \big(a(c+u)-b(d+v)\big)+\big(a(d+v)+b(c+u)\big)\iu \\
+                    &= (ac+au-bd-bv)+(ad+av+bc+bu)\iu \\
+                    &= (ac-bd+au-bv)+(ad+bc+av+bu)\iu\\
+                    &= (ac-bd)+(ad+bc)\iu+(au-bv)+(av+bu)\iu \\
+                    &= (a+b\iu)(c+d\iu)+(a+b\iu)(u+v\iu).\qedhere
 			\end{align*}
 		\end{proof}
 	\end{proposition}
 	\begin{corollary}
 		\label{cor:els complexos formen un cos}
-		El conjunt \(\field{C}\) amb la suma \(+\) i el producte \(\cdot\) és un cos.
+		El conjunt \(\field{C}\) amb la suma \(+\)
+        i el producte \(\cdot\) és un cos.
 	\end{corollary}
 	\subsection{Propietats de nombres complexos}
 	\begin{definition}[Conjugat d'un nombre complex]
-		\labelname{conjugat d'un nombre complex}\label{def:conjugat d'un nombre complex}
+		\labelname{conjugat d'un nombre complex}
+        \label{def:conjugat d'un nombre complex}
 		Sigui \(z = a+b\iu\) un nombre complex.
         Aleshores definim
 		\[
@@ -214,12 +231,14 @@
             \conjugat{\conjugat{z}} = z.
         \]
 		\begin{proof}
-			Per la definició de \myref{def:nombre complex} tenim que existeixen \(a\), \(b\in\field{R}\) tals que \(z = a+b\iu\).
-            Aleshores per la definició de \myref{def:conjugat d'un nombre complex} tenim que
+			Per la definició de \myref{def:nombre complex} tenim que
+            existeixen \(a\), \(b\in\field{R}\) tals que \(z = a+b\iu\).
+            Aleshores per la definició
+            de \myref{def:conjugat d'un nombre complex} tenim que
 			\begin{align*}
 				\conjugat{\conjugat{z}} &= \conjugat{\conjugat{a+b\iu}} \\
-				 &= \conjugat{a-b\iu} \\
-				 &= a+b\iu = z.\qedhere
+                                        &= \conjugat{a-b\iu} \\
+                                        &= a+b\iu = z.\qedhere
 			\end{align*}
 		\end{proof}
 	\end{proposition}
@@ -231,17 +250,21 @@
             \conjugat{z+w} = \conjugat{z}+\conjugat{w}.
         \]
 		\begin{proof}
-			Per la definició de \myref{def:nombre complex} tenim que existeixen \(a\), \(b\), \(c\), \(d\in\field{R}\) tals que
+			Per la definició de \myref{def:nombre complex} tenim que
+            existeixen \(a\), \(b\), \(c\), \(d\in\field{R}\) tals que
 			\[
                 z = a+b\iu\qquad\text{i}\qquad w = c+d\iu.
             \]
-			Aleshores per la definició de \myref{def:suma de nombres complexos} i la definició de \myref{def:conjugat d'un nombre complex} trobem que
+			Aleshores per la definició de \myref{def:suma de nombres complexos}
+            i la definició de \myref{def:conjugat d'un nombre complex} trobem
+            que
 			\begin{align*}
 				\conjugat{z+w} &= \conjugat{(a+b\iu)+(c+d\iu)} \\
-				 &= \conjugat{(a+c)+(b+d)\iu} \\
-				 &= (a+c)-(b+d)\iu \\
-				 &= (a-b\iu)+(c-d\iu) \\
-				 &= \conjugat{a+b\iu}+\conjugat{c+d\iu} = \conjugat{z}+\conjugat{w}.\qedhere
+                               &= \conjugat{(a+c)+(b+d)\iu} \\
+                               &= (a+c)-(b+d)\iu \\
+                               &= (a-b\iu)+(c-d\iu) \\
+                               &= \conjugat{a+b\iu}+\conjugat{c+d\iu}
+                                = \conjugat{z}+\conjugat{w}.\qedhere
 			\end{align*}
 		\end{proof}
 	\end{proposition}
@@ -253,18 +276,22 @@
             \conjugat{zw} = \conjugat{z}\,\conjugat{w}.
         \]
 		\begin{proof}
-			Per la definició de \myref{def:nombre complex} tenim que existeixen \(a\), \(b\), \(c\), \(d\in\field{R}\) tals que
+            Per la definició de \myref{def:nombre complex} tenim que existeixen
+            \(a\), \(b\), \(c\), \(d\in\field{R}\) tals que
 			\[
                 z = a+b\iu\qquad\text{i}\qquad w = c+d\iu.
             \]
-			Aleshores per la definició de \myref{def:producte de nombres complexos} i la definició de \myref{def:conjugat d'un nombre complex} trobem que
+            Aleshores per la definició
+            de \myref{def:producte de nombres complexos} i la definició
+            de \myref{def:conjugat d'un nombre complex} trobem que
 			\begin{align*}
 				\conjugat{zw} &= \conjugat{(a+b\iu)(c+d\iu)} \\
-				 &= \conjugat{(ac-bd)+(ad+bc)\iu} \\
-				 &= (ac-bd)-(ad+bc)\iu \\
-				 &= (ac-bd)+(-ad-bc)\iu \\
-				 &= (a-b\iu)(c-d\iu) \\
-				 &= \conjugat{a+b\iu}\,\conjugat{c+d\iu} = \conjugat{z}\,\conjugat{w}\qedhere.
+                              &= \conjugat{(ac-bd)+(ad+bc)\iu} \\
+                              &= (ac-bd)-(ad+bc)\iu \\
+                              &= (ac-bd)+(-ad-bc)\iu \\
+                              &= (a-b\iu)(c-d\iu) \\
+                              &= \conjugat{a+b\iu}\,\conjugat{c+d\iu}
+                               = \conjugat{z}\,\conjugat{w}\qedhere.
 			\end{align*}
 		\end{proof}
 	\end{proposition}
@@ -276,10 +303,11 @@
             z\conjugat{z} = a^{2}+b^{2}.
         \]
 		\begin{proof}
-			Per la definició de \myref{def:producte de nombres complexos} i la definició de \myref{def:conjugat d'un nombre complex} trobem que
+			Per la definició de \myref{def:producte de nombres complexos} i la
+            definició de \myref{def:conjugat d'un nombre complex} trobem que
 			\begin{align*}
-				z\conjugat{z} &= (a+b\iu)\conjugat{a+b\iu} \\
-				 &= (a+b\iu)(a-b\iu) = a^{2}+b^{2}.\qedhere
+                z\conjugat{z} &= (a+b\iu)\conjugat{a+b\iu} \\
+                              &= (a+b\iu)(a-b\iu) = a^{2}+b^{2}.\qedhere
 			\end{align*}
 		\end{proof}
 	\end{proposition}
@@ -288,12 +316,15 @@
 		Sigui \(z\) un nombre complex.
         Aleshores \(z = \conjugat{z}\) si i només si \(z\in\field{R}\).
 		\begin{proof}
-			Per la definició de \myref{def:nombre complex} tenim que existeixen \(a\), \(b\in\field{R}\) tals que \(z = a+b\iu\).
-            Aleshores si tenim \(z = \conjugat{z}\), per la definició de \myref{def:conjugat d'un nombre complex} trobem que
+			Per la definició de \myref{def:nombre complex} tenim que
+            existeixen \(a\), \(b\in\field{R}\) tals que \(z = a+b\iu\).
+            Aleshores si tenim \(z = \conjugat{z}\), per la definició
+            de \myref{def:conjugat d'un nombre complex} trobem que
 			\[
                 a+b\iu = a-b\iu,
             \]
-			que és equivalent a \(b = -b\), i per tant ha de ser \(b = 0\) i trobem que \(z = a\in\field{R}\).
+			que és equivalent a \(b = -b\), i per tant ha de ser \(b = 0\) i
+            trobem que \(z = a\in\field{R}\).
 		\end{proof}
 	\end{proposition}
 	\begin{proposition}
@@ -304,19 +335,26 @@
             z^{-1} = \frac{\conjugat{z}}{z\conjugat{z}}.
         \]
 		\begin{proof}
-			Per la definició de \myref{def:nombre complex} tenim que existeixen \(a\), \(b\in\field{R}\) tals que \(z = a+b\iu\).
+			Per la definició de \myref{def:nombre complex} tenim que
+            existeixen \(a\), \(b\in\field{R}\) tals que \(z = a+b\iu\).
             Aleshores tenim que
 			\begin{align*}
-				z\frac{\conjugat{z}}{z\conjugat{z}} &= \frac{z\conjugat{z}}{z\conjugat{z}} \\
-				 &= \frac{a^{2}+b^{2}}{a^{2}+b^{2}} = 1 \tag{\ref{prop:el producte d'un nombre complex pel seu conjugat és la suma dels quadrats de la seva part real i imaginaria}}
+				z\frac{\conjugat{z}}{z\conjugat{z}}
+                    &= \frac{z\conjugat{z}}{z\conjugat{z}} \\
+                    &= \frac{a^{2}+b^{2}}{a^{2}+b^{2}} = 1
+                    \tag{\ref{prop:el producte d'un nombre complex pel seu conjugat és la suma dels quadrats de la seva part real i imaginaria}}
 			\end{align*}
-			i per la definició de \myref{def:l'invers d'un element d'un anell} hem acabat.
+            i per la definició de \myref{def:l'invers d'un element d'un anell}
+            hem acabat.
 		\end{proof}
 	\end{proposition}
 	\begin{definition}[Part real i part imaginària d'un nombre complex]
-		\labelname{part real i part imaginària d'un nombre complex}\label{def:part real i part imaginària d'un nombre complex}
-		\labelname{part real d'un nombre complex}\label{def:part real d'un nombre complex}
-		\labelname{part imaginària d'un nombre complex}\label{def:part imaginària d'un nombre complex}
+		\labelname{part real i part imaginària d'un nombre complex}
+        \label{def:part real i part imaginària d'un nombre complex}
+		\labelname{part real d'un nombre complex}
+        \label{def:part real d'un nombre complex}
+		\labelname{part imaginària d'un nombre complex}
+        \label{def:part imaginària d'un nombre complex}
 		Sigui \(z = a+b\iu\) un nombre complex.
         Aleshores definim
 		\[
@@ -335,24 +373,31 @@
 		Sigui \(z\) un nombre complex.
         Aleshores
 		\[
-            \Re(z) = \frac{z+\conjugat{z}}{2}\qquad\text{i}\qquad\Im(z) = \frac{z-\conjugat{z}}{2\iu}.
+            \Re(z) = \frac{z+\conjugat{z}}{2}\qquad\text{i}\qquad\Im(z)
+                   = \frac{z-\conjugat{z}}{2\iu}.
         \]
 		\begin{proof}
-			Per la definició de \myref{def:nombre complex} tenim que existeixen \(a\), \(b\in\field{R}\) tals que \(z = a+b\iu\).
+			Per la definició de \myref{def:nombre complex} tenim que
+            existeixen \(a\), \(b\in\field{R}\) tals que \(z = a+b\iu\).
             Aleshores tenim que
 			\[
-                \frac{z+\conjugat{z}}{2} = \frac{a+b\iu+a-b\iu}{2} = \frac{2a}{2} = a = \Re(z),
+                \frac{z+\conjugat{z}}{2} = \frac{a+b\iu+a-b\iu}{2}
+                                         = \frac{2a}{2} = a = \Re(z),
             \]
 			i
 			\[
-                \frac{z-\conjugat{z}}{2\iu} = \frac{a+b\iu-a+b\iu}{2\iu} = \frac{2b\iu}{2\iu} = b = \Im(z),
+                \frac{z-\conjugat{z}}{2\iu} = \frac{a+b\iu-a+b\iu}{2\iu}
+                                            = \frac{2b\iu}{2\iu} = b = \Im(z),
             \]
-			i per la definició de \myref{def:part real i part imaginària d'un nombre complex} hem acabat.
+			i per la definició
+            de \myref{def:part real i part imaginària d'un nombre complex} hem
+            acabat.
 		\end{proof}
 	\end{proposition}
 	\subsection{Topologia de nombres complexos}
 	\begin{definition}[Mòdul d'un nombre complex]
-		\labelname{mòdul d'un nombre complex}\label{def:mòdul d'un nombre complex}
+		\labelname{mòdul d'un nombre complex}
+        \label{def:mòdul d'un nombre complex}
 		Sigui \(z = a+b\iu\) un nombre complex.
         Aleshores definim el seu mòdul com
 		\[
@@ -373,10 +418,15 @@
             \modul{z} = \sqrt{z\conjugat{z}}.
         \]
 		\begin{proof}
-			Per la definició de \myref{def:nombre complex} tenim que \(z = a+b\iu\), i per la proposició \myref{prop:el producte d'un nombre complex pel seu conjugat és la suma dels quadrats de la seva part real i imaginaria} trobem que
+			Per la definició de \myref{def:nombre complex} tenim
+            que \(z = a+b\iu\), i per la
+            proposició \myref{prop:el producte d'un nombre complex pel seu conjugat és la suma dels quadrats de la seva part real i imaginaria}
+            trobem que
 			\begin{align*}
 				z\conjugat{z} &= a^{2}+b^{2} \\
-				 &= \big(\sqrt{a^{2}+b^{2}}\big)^{2} = \modul{z}^{2}, \tag{\ref{def:mòdul d'un nombre complex}}
+                              &= \big(\sqrt{a^{2}+b^{2}}\big)^{2}
+                               = \modul{z}^{2},
+                              \tag{\ref{def:mòdul d'un nombre complex}}
 			\end{align*}
 			i per tant 
 			\[
@@ -385,7 +435,8 @@
 		\end{proof}
 	\end{proposition}
 	\begin{proposition}[Desigualtat triangular]
-		\labelname{desigualtat triangular}\label{prop:desigualta triangular nombres complexos}
+		\labelname{desigualtat triangular}
+        \label{prop:desigualta triangular nombres complexos}
 		Siguin \(z\) i \(w\) dos nombres complexos.
         Aleshores
 		\[
@@ -395,19 +446,32 @@
 			Per la definició de \myref{def:mòdul d'un nombre complex} tenim que
 			\begin{align*}
 				\modul{z+w}^{2} &= (z+w)\conjugat{(z+w)} \\
-				 &= (z+w)(\conjugat{z}+\conjugat{w}) \tag{\ref{prop:el conjugat de la suma és la suma de conjugats}} \\
-				 &= z\conjugat{z}+z\conjugat{w}+\conjugat{z}w+w\conjugat{w} \\
-				 &= \modul{z}^{2}+\modul{w}^{2}+\conjugat{z}w+z\conjugat{w} \tag{\ref{prop:el mòdul d'un nombre complex és l'arrel del nombre pel seu conjugat}} \\
-				 &= \modul{z}^{2}+\modul{w}^{2}+\conjugat{\conjugat{\conjugat{z}w}}+z\conjugat{w} \tag{\ref{prop:el conjugat del conjugat d'un nombre complex és ell mateix}} \\
-				 &= \modul{z}^{2}+\modul{w}^{2}+\conjugat{\conjugat{\conjugat{z}}\,\conjugat{w}}+z\conjugat{w} \tag{\ref{prop:el conjugat del producte és el producte de conjugats}} \\
-				 &= \modul{z}^{2}+\modul{w}^{2}+\conjugat{z\conjugat{w}}+z\conjugat{w}\tag{\ref{prop:el conjugat del conjugat d'un nombre complex és ell mateix}} \\
-				 &= \modul{z}^{2}+\modul{w}^{2}+2\Re(zw), \tag{\ref{prop:fórmula per la part real d'un nombre complex}} \\
-				&\leq\modul{z}^{2}+\modul{w}^{2}+2\modul{zw} \tag{\ref{obs:la part real d'un complex és menor que el seu mòdul}} \\
-				&\leq\modul{z}^{2}+\modul{w}^{2}+2\modul{z}\modul{w} \\
-				 &= (\modul{z}+\modul{w})^{2}
-				%TODO
+                                &= (z+w)(\conjugat{z}+\conjugat{w})
+                                \tag{\ref{prop:el conjugat de la suma és la suma de conjugats}} \\
+                                &= z\conjugat{z}+z\conjugat{w}
+                                   +\conjugat{z}w+w\conjugat{w} \\
+                                &= \modul{z}^{2}+\modul{w}^{2}
+                                   +\conjugat{z}w+z\conjugat{w}
+                                \tag{\ref{prop:el mòdul d'un nombre complex és l'arrel del nombre pel seu conjugat}} \\
+                                &= \modul{z}^{2}+\modul{w}^{2}
+                                   +\conjugat{\conjugat{\conjugat{z}w}}+z\conjugat{w}
+                                   \tag{\ref{prop:el conjugat del conjugat d'un nombre complex és ell mateix}} \\
+                                &= \modul{z}^{2}+\modul{w}^{2}
+                                   +\conjugat{\conjugat{\conjugat{z}}\,\conjugat{w}}+z\conjugat{w}
+                                \tag{\ref{prop:el conjugat del producte és el producte de conjugats}} \\
+                                &= \modul{z}^{2}+\modul{w}^{2}
+                                   +\conjugat{z\conjugat{w}}+z\conjugat{w}
+                                \tag{\ref{prop:el conjugat del conjugat d'un nombre complex és ell mateix}} \\
+                                &= \modul{z}^{2}+\modul{w}^{2}+2\Re(zw)
+                                \tag{\ref{prop:fórmula per la part real d'un nombre complex}} \\
+                                &\leq \modul{z}^{2}+\modul{w}^{2}+2\modul{zw}
+                                \tag{\ref{obs:la part real d'un complex és menor que el seu mòdul}} \\
+                                &\leq \modul{z}^{2}+\modul{w}^{2}
+                                      +2\modul{z}\modul{w} \\
+                                &= (\modul{z}+\modul{w})^{2}
+                                %TODO
 			\end{align*}
 		\end{proof}
 	\end{proposition}
-	
 \end{document} 
+
